# insta_uploader

./: .gitignore  ai.py  contentprompt.txt  get_message.py  google_sheets.py  image.py  mailverify.py  main.py  prompt.txt  readme.md  requirements.txt  upload_insta.py
.github/workflows/: build-and-test.yml  cron-job.txt  cron-job.yml
backend/: .dockerignore  Dockerfile  ai.py  backend.py  docker-compose.yml  fly.toml  image.py  mailverify.py  main.py  prompt.txt  pyproject.toml  readme.md
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.tsbuildinfo
frontend/src/: Form.tsx  ServerStatus.tsx  main.tsx
tests/: test_env.py
